--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,3 +2,7 @@
 @import "ember-modal-dialog/ember-modal-structure";
 @import "ember-modal-dialog/ember-modal-appearance";
 @import "./variables.scss";
+
+body {
+  background-color: $mercury;
+}
