--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -14,12 +14,14 @@ $tangerine: #ee9700;
 $medium-purple: #bd3cda;
 $mercury: #e5e5e5;
 $gallery: #ebebeb;
+$silver: #c0c0c0;
 $roman: #d9534f;
 
 // Fonts
 @include font-face('Montserrat-Regular');
 @include font-face('Montserrat-SemiBold');
 @include font-face('Montserrat-Bold');
+@include font-face('OpenSans-Light');
 @include font-face('OpenSans-Regular');
 @include font-face('OpenSans-Semibold');
 @include font-face('OpenSans-Bold');
@@ -28,6 +30,7 @@ $roman: #d9534f;
 $title-font-regular: 'Montserrat-Regular';
 $title-font-semibold: 'Montserrat-SemiBold';
 $title-font-bold: 'Montserrat-Bold';
+$text-font-light: 'OpenSans-Light';
 $text-font-regular: 'OpenSans-Regular';
 $text-font-semibold: 'OpenSans-Semibold';
 $text-font-bold: 'OpenSans-Bold';
