--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,35 @@
 @import "ember-modal-dialog/ember-modal-appearance";
 @import "./variables.scss";
 
-body {
+html, body {
   background-color: $mercury;
+}
+
+.ember-modal-dialog {
+  padding: 15px;
+  font-family: $title-font-regular;
+
+  .modal-message {
+    font-size: 18px;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .select-config {
+    color: #000;
+    background-color: #fff;
+    border: 1px solid $blue-ribbon;
+    border-radius: 5px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    margin: 10px 10px;
+    padding: 0 10px;
+  }
 }
