--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -15,6 +15,7 @@ $medium-purple: #bd3cda;
 $mercury: #e5e5e5;
 $gallery: #ebebeb;
 $silver: #c0c0c0;
+$wild-sand: #f5f5f5;
 $roman: #d9534f;
 
 // Fonts
