--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -17,6 +17,9 @@ $gallery: #ebebeb;
 $silver: #c0c0c0;
 $wild-sand: #f5f5f5;
 $roman: #d9534f;
+$spring-green: #00ee7f;
+$gold: #eed200;
+$torch-red: #ee0038;
 
 // Fonts
 @include font-face('Montserrat-Regular');
