--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -38,3 +38,7 @@ $text-font-light: 'OpenSans-Light';
 $text-font-regular: 'OpenSans-Regular';
 $text-font-semibold: 'OpenSans-Semibold';
 $text-font-bold: 'OpenSans-Bold';
+
+// z-indexes
+$z-index-modal: 9000;
+$z-index-map-overlay: 1000;
