Added styles for the graph options

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -39,4 +39,5 @@ $text-font-semibold: 'OpenSans-Semibold';
 $text-font-bold: 'OpenSans-Bold';
 
 // z-indexes
+$z-index-modal: 9000;
 $z-index-map-overlay: 1000;
