--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -70,6 +70,7 @@ $medium-purple: #bd3cda;
 $mercury: #e5e5e5;
 $gallery: #ebebeb;
 $silver: #c0c0c0;
+$silver-chalice: #a6a6a6;
 $wild-sand: #f5f5f5;
 $spring-green: #00ee7f;
 $gold: #eed200;
