Finished UI polishing and fixed aux initialization bug

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -75,6 +75,7 @@ $wild-sand: #f5f5f5;
 $spring-green: #00ee7f;
 $gold: #eed200;
 $torch-red: #ee0038;
+$cello: #1f4963;
 
 // Font constants
 $title-font-regular: 'Montserrat-Regular';
