--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "pod-styles";
 @import "ember-modal-dialog/ember-modal-structure";
 @import "ember-modal-dialog/ember-modal-appearance";
+@import 'ember-burger-menu';
 @import "./variables.scss";
 
 html, body {
@@ -9,6 +10,11 @@ html, body {
   border: 0;
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+body > .ember-view {
+  height: calc(100% - 20px);
 }
 
 .ember-modal-dialog {
