Introducing the dark theme

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,7 +6,7 @@
 
 html, body {
   user-select: none;
-  background-color: $mercury;
+  background-color: $mono-1;
   border: 0;
   margin: 0;
   padding: 0;
