--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -67,15 +67,20 @@ $blue-ribbon: #006eee;
 $big-stone: #153244;
 $tangerine: #ee9700;
 $medium-purple: #bd3cda;
-$mercury: #e5e5e5;
-$gallery: #ebebeb;
 $silver: #c0c0c0;
-$silver-chalice: #a6a6a6;
 $wild-sand: #f5f5f5;
 $spring-green: #00ee7f;
 $gold: #eed200;
 $torch-red: #ee0038;
-$cello: #1f4963;
+
+
+// Dark color constants
+$mono-1: #222933;
+$mono-2: #202630;
+$mono-3: #15191f;
+$mono-4: #323c4a;
+$mono-5: #424f61;
+$mono-6: #93a3b8;
 
 // Font constants
 $title-font-regular: 'Montserrat-Regular';
