Add delete button

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -47,6 +47,10 @@ body > .ember-view {
   }
 }
 
+.ember-modal-overlay {
+  z-index: $z-index-modal;
+}
+
 .liquid-container {
   transform: none;
 }
