--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -94,3 +94,6 @@ $text-font-bold: 'OpenSans-Bold';
 // z-indexes
 $z-index-modal: 9000;
 $z-index-map-overlay: 1000;
+
+// Transitions
+$default-transition-speed: 0.3s;
